View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022488 | Community | OCCT:Modeling Algorithms | public | 2011-05-10 17:31 | 2012-08-20 07:49 |
Reporter | Assigned To | ||||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | All | ||||
Product Version | 6.5.0 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022488: Typo in Geom2d_BSplineCurve::LocateU() - which uses a value not adjusted to period for periodic B-Splines | ||||
Description | Contribution from RLN. Typo in Geom2d_BSplineCurve::LocateU() - which uses a value not adjusted to period for periodic B-Splines. The bug shows up on periodic B-Splines when due to rounding issues the U parameter is slightly below the min knot (e.g. 0 vs 1e-18). NewU bumps up to 0 + period but due to wrong check, another if branch is chosen (one which uses BSplCLib::Hunt()) and respectively an exception later is thrown due to access beyond the max knot item. Similar code in Geom_BSplineCurve and Geom_BSplineSurface is correct. Another minor improvements: - computation of Abs(ParametricTolerance) only once. - removed Abs(ParametricTolerance) in the 3rd and 4th branch as they are irrelevant after 1st and 2nd | ||||
Tags | No tags attached. | ||||
Test case number | test case is not required | ||||
|
Sergey, do we have a code for the fix? |
|
Yes, I found it. Is it possible to put it in SVN now? |
2012-02-29 19:01 manager |
fix480.zip (30,748 bytes) |
|
Dear Julia, Could you revise the RLN contribution. |
|
No remarks |
|
Dear BugMaster, Workbench KAS:dev:aan-22488-occt from SVN branch http://svn/svn/occt/branches/OCC22488 (and aan-22488-products from trunk) was successfully compiled and tested on Linux and Windows platforms. There are not regressions in aan-22488-products regarding to KAS:dev:products-20120222-opt See results in /QADisk/occttests/results/KAS/dev/aan-22488-products_05032012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120222-opt_22022012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Integrated into master |
occt: master 41c52af3 2012-03-10 09:53:24
Committer: |
0022488: Typo in Geom2d_BSplineCurve::LocateU() - which uses a value not adjusted to period for periodic B-Splines |
Affected Issues 0022488 |
|
mod - src/Geom/Geom_BSplineCurve_1.cxx | Diff File | ||
mod - src/Geom/Geom_BSplineSurface_1.cxx | Diff File | ||
mod - src/Geom2d/Geom2d_BSplineCurve_1.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-08-02 11:31 | bugmaster | Category | OCCT:MOA => OCCT:Modeling Algorithms |
2011-11-24 15:05 |
|
Assigned To | bugmaster => jgv |
2011-11-24 15:05 |
|
Status | acknowledged => assigned |
2011-11-24 15:05 |
|
Resolution | suspended => reopened |
2011-11-24 15:05 |
|
Product Version | => 6.5.0 |
2011-11-24 15:05 |
|
Fixed in Version | EMPTY => |
2011-11-24 15:05 |
|
Target Version | => 6.5.3 |
2011-11-24 15:05 |
|
Description Updated | |
2012-02-09 08:51 |
|
Note Added: 0019472 | |
2012-02-09 08:51 |
|
Assigned To | jgv => szy |
2012-02-09 08:51 |
|
Target Version | 6.5.3 => 6.5.4 |
2012-02-29 19:00 |
|
Note Added: 0019824 | |
2012-02-29 19:01 |
|
File Added: fix480.zip | |
2012-03-01 13:30 |
|
Note Added: 0019833 | |
2012-03-01 13:30 |
|
Assigned To | szy => jgv |
2012-03-01 13:30 |
|
Status | assigned => resolved |
2012-03-02 12:55 |
|
Note Added: 0019847 | |
2012-03-02 12:55 |
|
Status | resolved => reviewed |
2012-03-02 13:30 |
|
Assigned To | jgv => aan |
2012-03-05 16:11 |
|
Note Added: 0019867 | |
2012-03-05 16:12 |
|
Test case number | => test case is not required |
2012-03-05 16:12 |
|
Status | reviewed => tested |
2012-03-11 10:37 | bugmaster | Note Added: 0019911 | |
2012-03-11 10:37 | bugmaster | Status | tested => verified |
2012-03-11 10:37 | bugmaster | Resolution | reopened => fixed |
2012-03-11 10:37 | bugmaster | Assigned To | aan => szy |
2012-03-11 10:44 | bugmaster | Target Version | 6.5.4 => 6.5.3 |
2012-03-29 17:26 |
|
Changeset attached | => occt master 41c52af3 |
2012-04-03 19:26 |
|
Assigned To | szy => Roman Lygin |
2012-08-20 07:49 |
|
Relationship added | duplicate of 0022629 |